--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<div class="container px-5-left">
+<div class="container ">
     <div class="logo">
       <img src="images/logoB.png" width="50" height="50">
     </div>
